# qdrant-mcp

./: CHANGES.md  README.md  plan.md  pyproject.toml
src/qdrant_mcp/: qdrant_memory.py  server.py  settings.py
tests/: test_qdrant_store.py
